--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
         <div class="header-inner">
           <nav class="page-header__nav">
             <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
-            <!-- <div class="page-header__menu" id="page-header__menu" data-menu> -->
+            <div class="xxx">
             <ul class="page-header__list page-header__list--nav">
               <li class="page-header__item page-header__item--nav">
                 <a class="page-header__link" href="./index.html">Студия</a>
@@ -81,7 +81,12 @@
                     <li class="services__item">
                         <a href="" class="services__link" >
                             <div class="services__picture">
-                            <img src="./images/tehno.jpg" alt="Технокряк" width="370">
+                            <picture>
+                              <source srcset="./images/mobile/tehno.jpg 1x, ./images/mobile/tehno@2X.jpg 2x" media="(max-width: 767px)" />
+                              <source srcset="./images/tablet/tehno.jpg 1x, ./images/tablet/tehno@2X.jpg 2x" media="(max-width: 1199px)" />
+                              <source srcset="./images/laptop/tehno.jpg 1x, ./images/laptop/tehno@2X.jpg 2x" media="(min-width: 1200px)" />
+                              <img src="./images/mobile/tehno.jpg" alt="Технокряк" />
+                            </picture>
                                 <div class=" services__fon">
                                 <p class="services__info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                     Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -96,7 +101,12 @@
                     <li class="services__item">
                         <a href="" class="services__link" >
                             <div class="services__picture">
-                            <img src="./images/star.jpg" alt="Постер New Orlean vs Golden Star" width="370">
+                              <picture>
+                              <source srcset="./images/mobile/Golden-Star.jpg 1x, ./images/mobile/Golden-Star@x2.jpg 2x" media="(max-width: 767px)" />
+                              <source srcset="./images/tablet/Golden-Star.jpg 1x, ./images/tablet/Golden-Star@x2.jpg 2x" media="(max-width: 1199px)" />
+                              <source srcset="./images/laptop/Golden-Star.jpg 1x, ./images/laptop/Golden-Star@x2.jpg 2x" media="(min-width: 1200px)" />
+                              <img src="./images/mobile/Golden-Star.jpg" alt="Постер New Orlean vs Golden Star" />
+                              </picture>
                                 <div class=" services__fon">
                                 <p class="services__info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                     Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -111,7 +121,12 @@
                     <li class="services__item">
                         <a href="" class="services__link" >
                             <div class="services__picture">
-                            <img src="./images/seafood.jpg" alt="Ресторан Seafood" width="370">
+                              <picture>
+                              <source srcset="./images/mobile/Seafood.jpg 1x, ./images/mobile/Seafood@2x.jpg 2x" media="(max-width: 767px)" />
+                              <source srcset="./images/tablet/Seafood.jpg 1x, ./images/tablet/Seafood@2x.jpg 2x" media="(max-width: 1199px)" />
+                              <source srcset="./images/laptop/Seafood.jpg 1x, ./images/laptop/Seafood@2x.jpg 2x" media="(min-width: 1200px)" />
+                              <img src="./images/mobile/Seafood.jpg" alt="Ресторан Seafood" />
+                              </picture>
                                 <div class=" services__fon">
                                 <p class="services__info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                     Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -126,7 +141,12 @@
                     <li class="services__item">
                         <a href="" class="services__link" >
                             <div class="services__picture">
-                            <img src="./images/prime.jpg" alt="Проект Prime" width="370">
+                              <picture>
+                              <source srcset="./images/mobile/Prime.jpg 1x, ./images/mobile/Prime@x2.jpg 2x" media="(max-width: 767px)" />
+                              <source srcset="./images/tablet/Prime.jpg 1x, ./images/tablet/Prime@x2.jpg 2x" media="(max-width: 1199px)" />
+                              <source srcset="./images/laptop/Prime.jpg 1x, ./images/laptop/Prime@x2.jpg 2x" media="(min-width: 1200px)" />
+                              <img src="./images/mobile/Prime.jpg" alt="Проект Prime" />
+                              </picture>
                                 <div class=" services__fon">
                                 <p class="services__info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                     Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -141,7 +161,12 @@
                     <li class="services__item">
                         <a href="" class="services__link" >
                             <div class="services__picture">
-                            <img src="./images/boxes.jpg" alt="Проект Boxes" width="370">
+                              <picture>
+                                <source srcset="./images/mobile/Boxes.jpg 1x, ./images/mobile/Boxes@x2.jpg 2x" media="(max-width: 767px)" />
+                                <source srcset="./images/tablet/Boxes.jpg 1x, ./images/tablet/Boxes@x2.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/laptop/Boxes.jpg 1x, ./images/laptop/Boxes@x2.jpg 2x" media="(min-width: 1200px)" />
+                                <img src="./images/mobile/Boxes.jpg" alt="Проект Boxes" />
+                              </picture>
                                 <div class=" services__fon">
                                 <p class="services__info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                     Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -156,7 +181,12 @@
                     <li class="services__item">
                         <a href="" class="services__link" >
                             <div class="services__picture">
-                            <img src="./images/borders.jpg" alt="Inspiration has no Borders" width="370">
+                                <picture>
+                                <source srcset="./images/mobile/Borders.jpg 1x, ./images/mobile/Borders@x2.jpg 2x" media="(max-width: 767px)" />
+                                <source srcset="./images/tablet/Borders.jpg 1x, ./images/tablet/Borders@x2.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/laptop/Borders.jpg 1x, ./images/laptop/Borders@x2.jpg 2x" media="(min-width: 1200px)" />
+                                <img src="./images/mobile/Borders.jpg" alt="Inspiration has no Borders" />
+                              </picture>
                                 <div class=" services__fon">
                                 <p class="services__info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                     Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -171,7 +201,12 @@
                     <li class="services__item">
                         <a href="" class="services__link" >
                             <div class="services__picture">
-                            <img src="./images/limited.jpg" alt="Издание Limited Edition" width="370">
+                                <picture>
+                                <source srcset="./images/mobile/limited-edition.jpg 1x, ./images/mobile/limited-edition@x2.jpg 2x" media="(max-width: 767px)" />
+                                <source srcset="./images/tablet/limited-edition.jpg 1x, ./images/tablet/limited-edition@x2.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/laptop/limited-edition.jpg 1x, ./images/laptop/limited-edition@x2.jpg 2x" media="(min-width: 1200px)" />
+                                <img src="./images/mobile/limited-edition.jpg" alt="Издание Limited Edition" />
+                                </picture>
                                 <div class=" services__fon">
                                 <p class="services__info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                     Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -186,7 +221,12 @@
                     <li class="services__item">
                         <a href="" class="services__link">
                             <div class="services__picture">
-                            <img src="./images/lab.jpg" alt="Проект LAB" width="370">
+                                <picture>
+                                <source srcset="./images/mobile/LAB.jpg 1x, ./images/mobile/LAB@x2.jpg 2x" media="(max-width: 767px)" />
+                                <source srcset="./images/tablet/LAB.jpg 1x, ./images/tablet/LAB@x2.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/laptop/LAB.jpg 1x, ./images/laptop/LAB@x2.jpg 2x" media="(min-width: 1200px)" />
+                                <img src="./images/mobile/LAB.jpg" alt="Проект LAB" />
+                                </picture>                            
                                 <div class=" services__fon">
                                 <p class="services__info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                     Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
@@ -201,8 +241,14 @@
                     <li class="services__item">
                         <a href="" class="services__link" >
                             <div class="services__picture">
-                            <img src="./images/business.jpg" alt="Growing Business" width="370">
-                                <div class=" services__fon">
+                            <!-- <img src="./images/business.jpg" alt="Growing Business" width="370"> -->
+                                <picture>
+                                <source srcset="./images/mobile/Growing-Business.jpg 1x, ./images/mobile/Growing-Business@x2.jpg 2x" media="(max-width: 767px)" />
+                                <source srcset="./images/tablet/Growing-Business.jpg 1x, ./images/tablet/Growing-Business@x2.jpg 2x" media="(max-width: 1199px)" />
+                                <source srcset="./images/laptop/Growing-Business.jpg 1x, ./images/laptop/Growing-Business@x2.jpg 2x" media="(min-width: 1200px)" />
+                                <img src="./images/mobile/Growing-Business.jpg" alt="Growing Business" />
+                                </picture>
+                            <div class=" services__fon">
                                 <p class="services__info">Ресурс предлагает комплексные предложения с разным уровнем функционала и сервисов.
                                     Все это позволит посетителю получить исчерпывающие сведения о компании или частном лице.</p>
                                 </div>
