--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
                 <nav class="page-header__nav">
                   <div class="position">
                     <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
-                    <button type="button"  aria-expanded="false" class="button__logo" >
+                    <button type="button"  aria-expanded="false" class="button__logo">
                       <svg width="40" height="40" aria-label="mobile menu switch" aria-controls="page-header__menu" >
-                        <use mob-menu__open-btn class="icon-menu" href="./images/sprite.svg#iconmenu_open "></use>
+                        <use  class="icon-menu" href="./images/sprite.svg#iconmenu_open "></use>
                         <use class="icon-cross" href="./images/sprite.svg#iconmenu_close"></use>
                       </svg>
                     </button>
                   </div>
-                  <div body class="page-header__menu is-hidden" id="page-header__menu" >
+                  <div class="page-header__menu" id="page-header__menu">
                     <ul class="page-header__list page-header__list--nav">
                         <li class="page-header__item page-header__item--nav">
                         <a class="page-header__link page-header__link--active" href="./index.html">Студия</a>
@@ -215,19 +215,28 @@
                 <h2 class="works__title">Чем мы занимаемся</h2>
                 <ul class="works__list">
                     <li>
-                        <a href=""><img src="./images/computer.jpg" alt="комп'ютер" width="370"></a>
+                        <a href="">
+                        <img src="./images/laptop/computer.jpg" alt="комп'ютер" width="370"
+                        srcset="./images/laptop/computer.jpg 1x, ./images/laptop/computer@2x.jpg 2x">
+                        </a>
                         <div class="works__name">
                             <p>Десктопные приложения</p>
                         </div>
                     </li>
                     <li>
-                        <a href=""><img src="./images/mobile.jpg" alt="мобільний" width="370"></a>
+                        <a href="">
+                        <img src="./images/laptop/mobile.jpg" alt="мобільний" width="370"
+                        srcset="./images/laptop/mobile.jpg 1x, ./images/laptop/mobile@2x.jpg 2x">
+                        </a>
                         <div class="works__name">
                             <p>Мобильные приложения</p>
                         </div>
                     </li>
                     <li>
-                        <a href=""><img src="./images/tablet.jpg" alt="планшет" width="370"></a>
+                        <a href="">
+                        <img src="./images/laptop/tablet.jpg" alt="планшет" width="370"
+                        srcset="./images/laptop/tablet.jpg 1x, ./images/laptop/tablet@2x.jpg 2x">
+                        </a>
                         <div class="works__name">
                             <p>Дизайнерские решения</p>
                         </div>
@@ -242,7 +251,16 @@
                 <h2 class="comanda__title">Наша команда</h2>
                 <ul class="comanda__list">
                     <li class="comanda__item">
-                        <img class="foto" src="./images/igor.jpg" alt="Игорь Демьяненко" width="270">
+                        <!-- <img class="foto" src="./images/igor.jpg" alt="Игорь Демьяненко" width="270"> -->
+                        <picture>
+                          <source srcset="/images/mobile/igor.jpg 1x, /images/mobile/igor@2x.jpg 2x" 
+                            media="(max-width: 767px)" />
+                          <source srcset="/images/tablet/igor.jpg 1x, /images/tablet/igor@2x.jpg 2x" 
+                            media="(max-width: 1199px)" />
+                          <source srcset="/images/laptop/igor.jpg 1x, /images/laptop/igor@2x.jpg 2x"
+                            media="(min-width: 1200px)" />
+                          <img class="foto" src="/images/mobile/igor.jpg" alt="Игорь Демьяненко" />
+                        </picture>
                         <div class="name-container">
                             <h3 class="comanda__name">Игорь Демьяненко</h3>
                             <p class="p-name">Product Designer</p>
@@ -251,7 +269,8 @@
                                     <a href="#" class="social__link">
                                         <svg class="social__icons" width="20px" height="20px">
                                             <use href="./images/sprite.svg#iconinstagram"></use>
-                                        </svg></a>
+                                        </svg>
+                                      </a>
                                 </li>
                                 <li class="social__item">
                                     <a href="#" class="social__link">
@@ -275,7 +294,13 @@
                         </div>
                     </li>
                     <li class="comanda__item">
-                        <img class="foto" src="./images/olga.jpg" alt="Ольга Репина" width="270">
+                        <!-- <img class="foto" src="./images/olga.jpg" alt="Ольга Репина" width="270"> -->
+                        <picture>
+                          <source srcset="/images/mobile/olga.jpg 1x, /images/mobile/olga@2X.jpg 2x" media="(max-width: 767px)" />
+                          <source srcset="/images/tablet/olga.jpg 1x, /images/tablet/olga@2X.jpg 2x" media="(max-width: 1199px)" />
+                          <source srcset="/images/laptop/olga.jpg 1x, /images/laptop/olga@2X.jpg 2x" media="(min-width: 1200px)" />
+                          <img class="foto" src="/images/mobile/olga.jpg" alt="Ольга Репина" />
+                        </picture>
                         <div class="name-container">
                             <h3 class="comanda__name">Ольга Репина</h3>
                             <p class="p-name">Frontend Developer</p>
@@ -308,7 +333,12 @@
                         </div>
                     </li>
                     <li class="comanda__item">
-                        <img class="foto" src="./images/nicholas.jpg" alt="Николай Тарасов" width="270">
+                        <picture>
+                          <source srcset="/images/mobile/nicholas.jpg 1x, /images/mobile/nicholas@2X.jpg 2x" media="(max-width: 767px)" />
+                          <source srcset="/images/tablet/nicholas.jpg 1x, /images/tablet/nicholas@2X.jpg 2x" media="(max-width: 1199px)" />
+                          <source srcset="/images/laptop/nicholas.jpg 1x, /images/laptop/nicholas@2X.jpg 2x" media="(min-width: 1200px)" />
+                          <img class="foto" src="/images/mobile/nicholas.jpg" alt="Николай Тарасов" />
+                        </picture>
                         <div class="name-container">
                             <h3 class="comanda__name">Николай Тарасов</h3>
                             <p class="p-name">Marketing</p>
@@ -341,7 +371,12 @@
                         </div>
                     </li>
                     <li class="comanda__item">
-                        <img class="foto" src="./images/michael.jpg" alt="Михаил Ермаков" width="270">
+                        <picture>
+                          <source srcset="/images/mobile/michael.jpg 1x, /images/mobile/michael@2X.jpg 2x" media="(max-width: 767px)" />
+                          <source srcset="/images/tablet/michael.jpg 1x, /images/tablet/michael@2X.jpg 2x" media="(max-width: 1199px)" />
+                          <source srcset="/images/laptop/michael.jpg 1x, /images/laptop/michael@2X.jpg 2x" media="(min-width: 1200px)" />
+                          <img class="foto" src="/images/mobile/michael.jpg" alt="Михаил Ермаков" />
+                        </picture>
                         <div class="name-container">
                             <h3 class="comanda__name">Михаил Ермаков</h3>
                             <p class="p-name">UI Designer</p>
