--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
                 <nav class="page-header__nav">
                   <div class="position">
                     <a href="" class="logo"><span class="logo-color">Web</span>Studio</a>
-                    <button type="button"  aria-expanded="false" class="button__logo" >
+                    <button type="button"  aria-expanded="false" class="button__logo" mob-menu__open-btn>
                       <svg width="40" height="40" aria-label="mobile menu switch" aria-controls="position">
                         <use  class="icon-menu" href="./images/sprite.svg#iconmenu_open " mob-menu__open-btn></use>
                         <use class="icon-cross" href="./images/sprite.svg#iconmenu_close" mob-menu__close-btn></use>
                       </svg>
                     </button>
                   </div>
-
-   
                   <div class="page-header__menu" id="page-header__menu" mob-menu >
                     <ul class="page-header__list page-header__list--nav">
                         <li class="page-header__item page-header__item--nav">
@@ -255,13 +253,13 @@
                     <li class="comanda__item">
                         <!-- <img class="foto" src="./images/igor.jpg" alt="Игорь Демьяненко" width="270"> -->
                         <picture>
-                          <source srcset="/images/mobile/igor.jpg 1x, /images/mobile/igor@2x.jpg 2x" 
+                          <source srcset="./images/mobile/igor.jpg 1x, ./images/mobile/igor@2x.jpg 2x" 
                             media="(max-width: 767px)" />
-                          <source srcset="/images/tablet/igor.jpg 1x, /images/tablet/igor@2x.jpg 2x" 
+                          <source srcset="./images/tablet/igor.jpg 1x, ./images/tablet/igor@2x.jpg 2x" 
                             media="(max-width: 1199px)" />
-                          <source srcset="/images/laptop/igor.jpg 1x, /images/laptop/igor@2x.jpg 2x"
+                          <source srcset="./images/laptop/igor.jpg 1x, ./images/laptop/igor@2x.jpg 2x"
                             media="(min-width: 1200px)" />
-                          <img class="foto" src="/images/mobile/igor.jpg" alt="Игорь Демьяненко" />
+                          <img class="foto" src="./images/mobile/igor.jpg" alt="Игорь Демьяненко" />
                         </picture>
                         <div class="name-container">
                             <h3 class="comanda__name">Игорь Демьяненко</h3>
@@ -298,10 +296,10 @@
                     <li class="comanda__item">
                         <!-- <img class="foto" src="./images/olga.jpg" alt="Ольга Репина" width="270"> -->
                         <picture>
-                          <source srcset="/images/mobile/olga.jpg 1x, /images/mobile/olga@2X.jpg 2x" media="(max-width: 767px)" />
-                          <source srcset="/images/tablet/olga.jpg 1x, /images/tablet/olga@2X.jpg 2x" media="(max-width: 1199px)" />
-                          <source srcset="/images/laptop/olga.jpg 1x, /images/laptop/olga@2X.jpg 2x" media="(min-width: 1200px)" />
-                          <img class="foto" src="/images/mobile/olga.jpg" alt="Ольга Репина" />
+                          <source srcset="./images/mobile/olga.jpg 1x, ./images/mobile/olga@2X.jpg 2x" media="(max-width: 767px)" />
+                          <source srcset="./images/tablet/olga.jpg 1x, ./images/tablet/olga@2X.jpg 2x" media="(max-width: 1199px)" />
+                          <source srcset="./images/laptop/olga.jpg 1x, ./images/laptop/olga@2X.jpg 2x" media="(min-width: 1200px)" />
+                          <img class="foto" src="./images/mobile/olga.jpg" alt="Ольга Репина" />
                         </picture>
                         <div class="name-container">
                             <h3 class="comanda__name">Ольга Репина</h3>
@@ -336,9 +334,9 @@
                     </li>
                     <li class="comanda__item">
                         <picture>
-                          <source srcset="/images/mobile/nicholas.jpg 1x, /images/mobile/nicholas@2X.jpg 2x" media="(max-width: 767px)" />
-                          <source srcset="/images/tablet/nicholas.jpg 1x, /images/tablet/nicholas@2X.jpg 2x" media="(max-width: 1199px)" />
-                          <source srcset="/images/laptop/nicholas.jpg 1x, /images/laptop/nicholas@2X.jpg 2x" media="(min-width: 1200px)" />
+                          <source srcset="./images/mobile/nicholas.jpg 1x, ./images/mobile/nicholas@2X.jpg 2x" media="(max-width: 767px)" />
+                          <source srcset="./images/tablet/nicholas.jpg 1x, ./images/tablet/nicholas@2X.jpg 2x" media="(max-width: 1199px)" />
+                          <source srcset="./images/laptop/nicholas.jpg 1x, ./images/laptop/nicholas@2X.jpg 2x" media="(min-width: 1200px)" />
                           <img class="foto" src="/images/mobile/nicholas.jpg" alt="Николай Тарасов" />
                         </picture>
                         <div class="name-container">
@@ -374,10 +372,10 @@
                     </li>
                     <li class="comanda__item">
                         <picture>
-                          <source srcset="/images/mobile/michael.jpg 1x, /images/mobile/michael@2X.jpg 2x" media="(max-width: 767px)" />
-                          <source srcset="/images/tablet/michael.jpg 1x, /images/tablet/michael@2X.jpg 2x" media="(max-width: 1199px)" />
-                          <source srcset="/images/laptop/michael.jpg 1x, /images/laptop/michael@2X.jpg 2x" media="(min-width: 1200px)" />
-                          <img class="foto" src="/images/mobile/michael.jpg" alt="Михаил Ермаков" />
+                          <source srcset="./images/mobile/michael.jpg 1x, ./images/mobile/michael@2X.jpg 2x" media="(max-width: 767px)" />
+                          <source srcset="./images/tablet/michael.jpg 1x, ./images/tablet/michael@2X.jpg 2x" media="(max-width: 1199px)" />
+                          <source srcset="./images/laptop/michael.jpg 1x, ./images/laptop/michael@2X.jpg 2x" media="(min-width: 1200px)" />
+                          <img class="foto" src="./images/mobile/michael.jpg" alt="Михаил Ермаков" />
                         </picture>
                         <div class="name-container">
                             <h3 class="comanda__name">Михаил Ермаков</h3>
