--- a/portfolio.html
+++ b/portfolio.html
@@ -305,6 +305,27 @@
         </section>
     </main>
 
+
+<div class="prob">
+    <button type="button" class="knopka" mob-menu__open-btn>
+      <svg width="40" height="40" >
+        <use class="icon-menu" href="./images/sprite.svg#iconmenu_open "></use>
+    </button>
+    <div class="menuwka " mob-menu >
+      <ul class="list-menu">
+        <li class="menu-item">da</li>
+        <li class="menu-item">no</li>
+        <li class="menu-item">ok</li>
+      </ul>
+    <button type="button" aria-expanded="false" class="knopka" mob-menu__close-btn>
+    <svg width="40" height="40" >
+    <use class="icon-cross" href="./images/sprite.svg#iconmenu_close"></use>
+    </svg>
+    </div>
+</div>
+
+
+
     <!-- Підвал -->
     <footer class="footer">
       <div class="container footer__container">
