--- a/index.html
+++ b/index.html
@@ -296,10 +296,10 @@
                     <li class="comanda__item">
                         <!-- <img class="foto" src="./images/olga.jpg" alt="Ольга Репина" width="270"> -->
                         <picture>
-                          <source srcset="../images/mobile/olga.jpg 1x, ../images/mobile/olga@2X.jpg 2x" media="(max-width: 767px)" />
-                          <source srcset="../images/tablet/olga.jpg 1x, ../images/tablet/olga@2X.jpg 2x" media="(max-width: 1199px)" />
-                          <source srcset="../images/laptop/olga.jpg 1x, ../images/laptop/olga@2X.jpg 2x" media="(min-width: 1200px)" />
-                          <img class="foto" src="../images/mobile/olga.jpg" alt="Ольга Репина" />
+                          <source srcset="./images/mobile/olga.jpg 1x, ./images/mobile/olga@2X.jpg 2x" media="(max-width: 767px)" />
+                          <source srcset="./images/tablet/olga.jpg 1x, ./images/tablet/olga@2X.jpg 2x" media="(max-width: 1199px)" />
+                          <source srcset="./images/laptop/olga.jpg 1x, ./images/laptop/olga@2X.jpg 2x" media="(min-width: 1200px)" />
+                          <img class="foto" src="./images/mobile/olga.jpg" alt="Ольга Репина" />
                         </picture>
                         <div class="name-container">
                             <h3 class="comanda__name">Ольга Репина</h3>
