--- a/portfolio.html
+++ b/portfolio.html
@@ -308,17 +308,14 @@
 
 <div class="prob">
     <button type="button" class="knopka" mob-menu__open-btn>
-      <svg width="40" height="40" >
+      <svg width="40" height="40" class="burger">
         <use class="icon-menu" href="./images/sprite.svg#iconmenu_open "></use>
+      </svg>
     </button>
-    <div class="menuwka " mob-menu >
-      <ul class="list-menu">
-        <li class="menu-item">da</li>
-        <li class="menu-item">no</li>
-        <li class="menu-item">ok</li>
-      </ul>
+    <div class="menuwka is-hidden" mob-menu >
+<a href="" class="red">fff</a>
     <button type="button" aria-expanded="false" class="knopka" mob-menu__close-btn>
-    <svg width="40" height="40" >
+    <svg width="40" height="40" class="close">
     <use class="icon-cross" href="./images/sprite.svg#iconmenu_close"></use>
     </svg>
     </div>
@@ -392,5 +389,6 @@
       </div>
     </footer>
     <script src="./js/modal.js"></script>
+        <script src="./js/mobile-menu.js"></script>
 </body>
 </html> 
