--- a/portfolio.html
+++ b/portfolio.html
@@ -369,7 +369,7 @@
         </div>
       </div>
     </footer>
-    <script src="../js/modal.js"></script>
-    <script src="../js/mobile-menu.js"></script>
+    <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
 </html> 
